--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -11,12 +11,19 @@
 <div class="card">
 <div class="row no-gutters">
   <aside class="col-md-6">
-  <article class="gallery-wrap"> 
-      <div class="img-big-wrap">
-          <a href="#"><img src="{{ single_product.images.url }}"></a>
-      </div> <!-- img-big-wrap.// -->
-      
-  </article> <!-- gallery-wrap .end// -->
+    <article class="gallery-wrap"> 
+        <div class="img-big-wrap mainImage">
+          <center><img src="{{ single_product.images.url }}"></center>
+        </div> <!-- img-big-wrap.// -->
+    </article> <!-- gallery-wrap .end// -->
+    <ul class="thumb">
+      <li>
+        <a href="{{ single_product.images.url }}" target="mainImage"><img src="{{ single_product.images.url }}" alt="Product Image"></a>
+        {% for i in product_gallery %}
+        <a href="{{i.image.url}}" target="mainImage"><img src="{{i.image.url}}" alt="Product Image"></a>
+        {% endfor %}
+      </li>
+    </ul>
   </aside>
 <main class="col-md-6 border-left">
 
@@ -27,14 +34,7 @@
   <h2 class="title">{{ single_product.product_name }}</h2>
   <div class="rating-star">
     <span>
-      <i class="fa fa-star
-      {% if single_product.averageReview < 0.5 %}
-      -o
-      {% elif single_product.averageReview >= 0.5 and single_product.averageReview < 1%}
-      -half-o 
-      {% endif %}
-      " aria-hidden="true">
-      </i>
+      <i class="fa fa-star{% if single_product.averageReview < 0.5 %}-o{% elif single_product.averageReview >= 0.5 and single_product.averageReview < 1%}-half-o {% endif %}" aria-hidden="true"></i>
       <i class="fa fa-star{% if single_product.averageReview < 1.5 %}-o{% elif single_product.averageReview >= 1.5 and single_product.averageReview < 2%}-half-o {% endif %}" aria-hidden="true"></i>
       <i class="fa fa-star{% if single_product.averageReview < 2.5 %}-o{% elif single_product.averageReview >= 2.5 and single_product.averageReview < 3%}-half-o {% endif %}" aria-hidden="true"></i>
       <i class="fa fa-star{% if single_product.averageReview < 3.5 %}-o{% elif single_product.averageReview >= 3.5 and single_product.averageReview < 4%}-half-o {% endif %}" aria-hidden="true"></i>
@@ -42,8 +42,6 @@
       <span>{{single_product.countReview}} reviews</span>
     </span>
   </div>
-
-
 
   <div class="mb-3"> 
       <var class="price h4">$ {{single_product.price}}</var> 
